[package]

name = "static"
version = "0.0.1"
authors = ["Zach Pomerantz <zmp@umich.edu>"]
description = "Static file serving for Iron."
repository = "https://github.com/iron/static"
license = "MIT"

[dependencies]
hyper = "*"
iron = "*"
mount = "*"
time = "*"
router = "*"

[dependencies.iron-test]
git = "https://github.com/aleksandrpak/iron-test.git"
rev = "9c8f28fb1693bd96f1f2a89cc61619b5d60c476b"
