[package]

name = "static"
version = "0.0.1"
authors = ["Zach Pomerantz <zmp@umich.edu>"]
description = "Static file serving for Iron."
repository = "https://github.com/iron/static"
license = "MIT"

[dependencies]
hyper = "*"
iron = "*"
time = "*"
regex = "*"
router = "*"

[dependencies.mount]
git = "https://github.com/iron/mount.git"
