[package]
authors = [
    "Zach Pomerantz <zmp@umich.edu>",
    "Jonathan Reem <jonathan.reem@gmail.com>",
]
description = "Static file serving for Iron."
keywords = [
    "iron",
    "web",
    "http",
    "file",
]
license = "MIT"
name = "staticfile"
repository = "https://github.com/iron/staticfile"
version = "0.4.0"

[dependencies]
iron = "0.6.0"
mount = "0.4.0"
time = "0.1.38"
url = "1.6.0"

[dependencies.filetime]
optional = true
version = "0.1.14"

[dev-dependencies]
hyper = "0.10.0"
iron-test = "0.6.0"
router = "0.6.0"

[features]
cache = ["filetime"]
